# my-learning

./: .gitignore  info.txt  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
updatedlangchain/: langchain_intro.ipynb  messages.ipynb  middleware.ipynb  modelintegration.ipynb  structuredoutput.ipynb  tools.ipynb
updatedlangchain/project/github-ai-assistant/: pyproject.toml  steps.txt
updatedlangchain/project/github-ai-assistant/app/: config.py  main.py  prompts.py
updatedlangchain/project/github-ai-assistant/app/agents/: github_agent.py
updatedlangchain/project/github-ai-assistant/app/api/: routes.py
updatedlangchain/project/github-ai-assistant/app/services/: github_client.py
updatedlangchain/project/github-ai-assistant/app/tools/: issue_tools.py  repo_tools.py  search_tools.py
