[project]
name = "langchainupdated"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.1",
    "httpx>=0.28.1",
    "langchain>=1.3.12",
    "langchain-google-community>=5.0.0",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.4",
    "langgraph>=1.2.9",
    "openai>=2.45.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "uvicorn>=0.51.0",
]

[tool.uv.workspace]
members = [
    "updatedlangchain/project/devops-github-assistant",
    "updatedlangchain/project/github-ai-assistant",
]
